# SphereX

./: CMakeLists.txt  README.md  compile_flags.txt
examples/: demo.cpp  demo.hpp
examples/assets/imgui/: gui_layout.ini
examples/assets/shader/: fShader.glsl  vShader.glsl
examples/sprites/: icons.aseprite
include/core/: application.hpp  editorLayout.hpp  glfwHandler.hpp  imguiHandler.hpp  input.hpp  program.hpp  renderer.hpp  update.hpp
include/events/: command.hpp  inotify.hpp
include/geometry/: quad.hpp  quadVertex.hpp  transform.hpp
include/helpers/: definitions.hpp  framebuffer.hpp  parser.hpp  shader.hpp  texture.hpp  textureHandler.hpp  uniform.hpp
include/objects/: camera.hpp  gameObject.hpp  world.hpp
include/rendering/: batchRenderer.hpp  renderable.hpp  sprite.hpp  spriteRenderer.hpp  texture.hpp  textureAtlas.hpp
include/scene/: camera.hpp  cameraController.hpp  gameObject.hpp  world.hpp
src/core/: application.cpp  editorLayout.cpp  glfwHandler.cpp  imguiHandler.cpp  input.cpp  program.cpp  renderer.cpp  update.cpp
src/events/: command.cpp  inotify.cpp
src/geometry/: quad.cpp  transform.cpp
src/helpers/: framebuffer.cpp  parser.cpp  shader.cpp  texture.cpp  textureHandler.cpp  uniform.cpp
src/objects/: camera.cpp  cameraController.cpp  gameObject.cpp
src/rendering/: batchRenderer.cpp  spriteRenderer.cpp  texture.cpp  textureAtlas.cpp
src/scene/: camera.cpp  cameraController.cpp  gameObject.cpp  world.cpp
