cmake_minimum_required(VERSION 3.22.1)
project(OpenGL)
add_subdirectory(deps/glad)
add_subdirectory(deps/glfw)
add_subdirectory(deps/glm)
set(core "src/core/application.cpp" "src/core/glfwHandler.cpp" "src/core/input.cpp" "src/core/program.cpp" "src/core/renderer.cpp" "src/core/update.cpp")
set(events "src/events/command.cpp" "src/events/inotify.cpp")
set(geometry "src/geometry/quad.cpp")
set(helpers "src/helpers/parser.cpp" "src/helpers/shader.cpp" "src/helpers/texture.cpp" "src/helpers/uniform.cpp")
set(objects "src/objects/camera.cpp" "src/objects/cameraController.cpp")
set(rendering "src/rendering/batchRenderer.cpp" "src/rendering/spriteRenderer.cpp")
add_executable(demo examples/demo.cpp ${core} ${events} ${geometry} ${helpers} ${objects} ${rendering})
find_package(OpenGL REQUIRED)
target_include_directories(demo PRIVATE include PRIVATE deps/glad/include PRIVATE deps)
target_link_libraries(demo glad glfw glm OpenGL::GL)
